# Prototype

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  vcsetup.bat
CMake/: Utils.cmake
Source/: CMakeLists.txt
Source/Core/: CMakeLists.txt  Core.cpp  Core.h  Main.cpp  Main_old.cpp  WindowManager.cpp  WindowManager.h
Source/Core/BaseEditor/: CMakeLists.txt  IEditorController.hpp  IEditorModel.hpp  IEditorView.hpp
Source/Core/Binding/: CMakeLists.txt  imgui_impl_glfw_gl3.cpp
Source/Core/Data/: CMakeLists.txt  TrackMarker.cpp  TrackMarker.h  Video.cpp  Video.h  VideoFrameAccessor.cpp  VideoFrameAccessor.h
Source/Core/Project/: CMakeLists.txt  Project.cpp  Project.h  Project2JSON.cpp  Project2JSON.h  ProjectHeader.cpp  ProjectHeader.h
Source/Core/Task/: CMakeLists.txt  ITask.hpp  TaskScheduler.cpp  TaskScheduler.h
Source/Core/Task/ProjectIO/: CMakeLists.txt  ProjectLoaderTask.cpp  ProjectLoaderTask.h  ProjectSaveTask.cpp  ProjectSaveTask.h
Source/Core/Task/Video/: CMakeLists.txt  ReadVideo.cpp  ReadVideo.h
Source/Core/Utils/: CMakeLists.txt  File.cpp  File.h  FileUtils.cpp  FileUtils.h  Image.cpp  Image.h  ImageUtils.cpp  ImageUtils.h  VideoUtils.cpp  VideoUtils.h
Source/Data/: CMakeLists.txt  Clip.cpp  Clip.h
Source/UI/: CMakeLists.txt
Source/UI/Editor/: CMakeLists.txt
Source/UI/Editor/NodeEd/: CMakeLists.txt  NodeEdController.cpp  NodeEdController.h  NodeEdModel.cpp  NodeEdModel.h  NodeEdView.cpp  NodeEdView.h
Source/UI/Editor/SlamEd/: CMakeLists.txt  SlamEdController.cpp  SlamEdController.h  SlamEdModel.cpp  SlamEdModel.h  SlamEdView.cpp  SlamEdView.h
Source/UI/Editor/TrackerEd/: CMakeLists.txt  TrackerEdController.cpp  TrackerEdController.h  TrackerEdModel.cpp  TrackerEdModel.h  TrackerEdView.cpp  TrackerEdView.h
Source/UI/Editor/Viewport3D/: CMakeLists.txt  Viewport3DController.cpp  Viewport3DController.h  Viewport3DModel.cpp  Viewport3DModel.h  Viewport3DView.cpp  Viewport3DView.h
Source/UI/MainWindow/: CMakeLists.txt  MainWindowController.cpp  MainWindowController.h  MainWindowModel.cpp  MainWindowModel.h  MainWindowView.cpp  MainWindowView.h
